--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-native-safe-area-plus",
-    "version": "2.0.0",
+    "version": "2.5.0",
     "description": "A flexible way to handle safe area, also works on Android and iOS",
     "main": "index.js",
     "types": "index.d.ts",
@@ -26,10 +26,10 @@
         "url": "https://github.com/crazycodeboy/react-native-safe-area-plus/issues"
     },
     "dependencies": {
-        "prop-types": "^15.6.0",
-        "react-native-isiphonex-device": "^2.0.0"
+        "prop-types": "^15.6.0"
     },
     "peerDependencies": {
+        "react-native-isiphonex-device": ">=2.5.0",
         "react-native": ">=0.20.0",
         "prop-types": "^15.5.7"
     },
