--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-native-safe-area-plus",
-    "version": "2.5.0",
+    "version": "2.6.1",
     "description": "A flexible way to handle safe area, also works on Android and iOS",
     "main": "index.js",
     "types": "index.d.ts",
@@ -26,6 +26,7 @@
         "url": "https://github.com/crazycodeboy/react-native-safe-area-plus/issues"
     },
     "dependencies": {
+        "deprecated-react-native-prop-types": "^2.3.0",
         "prop-types": "^15.6.0"
     },
     "peerDependencies": {
